--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
-  "name": "react-tailwind-template",
+  "name": "github-landing",
   "version": "0.1.0",
+  "homepage": "http://yashsehgal.github.io/github-landing",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.23",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore .",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,10 +46,13 @@
     ]
   },
   "devDependencies": {
-    "react-icons": "^4.3.1",
-    "react-modal": "^3.15.1",
-    "react-router-dom": "^6.3.0",
-    "react-tooltip": "^4.2.21",
-    "tailwindcss": "^3.0.24"
+    "class-variance-authority": "^0.5.1",
+    "clsx": "^1.2.1",
+    "gh-pages": "^5.0.0",
+    "lucide-react": "^0.130.0",
+    "prettier": "^2.8.7",
+    "tailwind-merge": "^1.11.0",
+    "tailwindcss": "^3.3.1",
+    "tailwindcss-animate": "^1.0.5"
   }
 }
