--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "github-landing",
   "version": "0.1.0",
-  "homepage": "http://yashsehgal.github.io/github-landing",
+  "homepage": "https://yashsehgal.github.io/github-landing/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -24,8 +25,8 @@
     "eject": "react-scripts eject",
     "format": "prettier --check --ignore-path .gitignore .",
     "format:fix": "prettier --write --ignore-path .gitignore .",
-    "predeploy" : "npm run build",
-    "deploy" : "gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -53,6 +54,7 @@
     "prettier": "^2.8.7",
     "tailwind-merge": "^1.11.0",
     "tailwindcss": "^3.3.1",
-    "tailwindcss-animate": "^1.0.5"
+    "tailwindcss-animate": "^1.0.5",
+    "typewriter-effect": "^2.19.0"
   }
 }
