--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gh-pages": "^5.0.0",
     "lucide-react": "^0.130.0",
     "prettier": "^2.8.7",
+    "react-parallax-tilt": "^1.7.126",
     "tailwind-merge": "^1.11.0",
     "tailwindcss": "^3.3.1",
     "tailwindcss-animate": "^1.0.5",
